[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-manager-py"
version = "0.3.6"
authors = [{ name="Michelle", email="michellejang1972@gmail.com" }]
description = "A number-based folder management and auto-alignment tool."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-only" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
# folder_manager.py 파일 안에 main 함수가 있다고 가정
fm = "folder_manager:main"

[tool.setuptools]
# 패키지를 수동으로 지정하는 대신, 현재 디렉토리(.)에서 자동으로 찾도록 설정
packages = { find = { where = ["."] } }
